// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | LinkBuy LinkBuy 1`] = `
.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 {
  color: #0046FF;
  padding: 2px 4px;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  background-color: #0046FF;
}

.c1:active {
  background-color: hsl(223.5,100%,35%);
}

<a
  className="c0 c1"
  href="/somewhere"
  onClick={[Function]}
>
  <span
    className="c2"
  >
    Buy
  </span>
</a>
`;

exports[`Storyshots Molecules | LinkBuy LinkBuy disabled 1`] = `
.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  color: #A0A09B;
  padding: 2px 4px;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  className="c0"
  disabled={true}
>
  <span
    className="c1"
  >
    Buy
  </span>
</span>
`;

exports[`Storyshots Molecules | LinkBuy LinkBuy with rel as nofollow 1`] = `
.c2 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: inline;
  padding: 0;
  color: #0046FF;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1 {
  color: #0046FF;
  padding: 2px 4px;
}

.c1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #FFFFFF;
  background-color: #0046FF;
}

.c1:active {
  background-color: hsl(223.5,100%,35%);
}

<a
  className="c0 c1"
  href="/somewhere"
  onClick={[Function]}
  rel="nofollow"
>
  <span
    className="c2"
  >
    Buy
  </span>
</a>
`;
